--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,7 +3,7 @@
     --secondary-textcolor: rgba(161, 165, 186, 1);
     --white: rgb(255, 255, 255);
     --active: rgba(67, 152, 211, 1);
-    --main-bg: rgba(225, 229, 240, 1);
+    --main-bg: rgb(225, 229, 240);
     --lines-color: rgba(214, 218, 230, 1);
     --menu-bg: rgba(101, 109, 139, 1);
     --menu-text: rgba(225, 229, 240, 1);
