--- a/css/utils.css
+++ b/css/utils.css
@@ -1,6 +1,6 @@
 body {
   background-color: var(--background-color);
-  font-family: Roboto, sans-serif;
+  font-family: "Futura", sans-serif;
   color: var(--main-textcolor);
   letter-spacing: 0.03em;
 }
@@ -65,4 +65,9 @@ img {
   -webkit-clip-path: inset 50%;
           clip-path: inset 50%;
   margin: -1px;
+}
+
+@font-face {
+  font-family: "Futura";
+  src: url("../fonts/futura.ttf") format("truetype");
 }/*# sourceMappingURL=utils.css.map */
