--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,3 +1,8 @@
+.main__container {
+    display: flex;
+    background-color: var(--main-bg);
+}
+
 .menu {
     width: 280px;
     height: 1080px;
@@ -11,7 +16,20 @@
         width: 220px;
 height: 64px;
 border-radius: 10px;
+display: flex;
+align-items: center;
+padding: 16px;
     }
+
+    &__link {
+        font-size: 13px;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.325px;
+text-transform: uppercase;
+color: var(--menu-text);
+    }
+
 }
 }
 
