--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
-@import './utils.scss';
-@import './variables.scss';
-@import './menu.scss';
+@import './utils';
+@import './variables';
+@import './menu';
+@import './orders'
