--- a/sass/utils.scss
+++ b/sass/utils.scss
@@ -1,6 +1,6 @@
 body {
     background-color: var(--background-color);
-    font-family: Roboto, sans-serif;
+    font-family: "Futura", sans-serif;
     color: var(--main-textcolor);
     letter-spacing: 0.03em;
   }
@@ -62,3 +62,9 @@ body {
     clip-path: inset (50%);
     margin: -1px;
   }
+
+  @font-face {
+    font-family: "Futura";
+    src: url('../fonts/futura.ttf') format('truetype');
+  }
+
