--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,8 @@ img {
   --lines-color: rgba(214, 218, 230, 1);
   --menu-bg: rgba(101, 109, 139, 1);
   --menu-text: rgba(225, 229, 240, 1);
-  --start-btn: rgba(228, 157, 62, 1);
-  --green-staus: rgba(83, 180, 95, 1);
+  --action-btn: rgba(228, 157, 62, 1);
+  --green-status: rgba(83, 180, 95, 1);
   --red-status: rgba(204, 12, 0, 1);
 }
 
@@ -95,6 +95,7 @@ img {
 .menu {
   width: 280px;
   height: 1080px;
+  padding: 30px;
   background-color: var(--menu-bg);
 }
 .menu__nav {
@@ -125,10 +126,85 @@ img {
   background-color: var(--main-textcolor);
 }
 
+.orders {
+  padding: 40px;
+}
 .orders__title {
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.5px;
+}
+
+.table__section {
+  height: 880px;
+  overflow: auto;
+  background-color: var(--white);
+  border-radius: 0px 10px 10px 10px;
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+          box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+}
+
+.orders__table {
+  width: 100%;
+  table-layout: fixed;
+  min-width: 1000px;
+  border-collapse: collapse;
+}
+.orders__table__title {
+  position: sticky;
+  top: 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+  color: var(--secondary-textcolor);
+  text-align: start;
+}
+.orders__table__item {
+  border-bottom: 1px solid var(--lines-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+  color: var(--main-textcolor);
+}
+
+.delivered {
+  color: var(--green-status);
+}
+
+.cancelled {
+  color: var(--red-status);
+}
+
+th,
+td {
+  padding: 16px 20px;
+}
+
+.details__btn {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
+  color: var(--secondary-textcolor);
+  padding: 5px 15px;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.action__btn {
+  padding: 8px 39px;
+  width: 160px;
+  border-radius: 10px;
+  border: 2px solid var(--action-btn);
+  color: var(--action-btn);
+  background-color: transparent;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
 }/*# sourceMappingURL=main.css.map */
