--- a/css/variables.css
+++ b/css/variables.css
@@ -7,7 +7,7 @@
   --lines-color: rgba(214, 218, 230, 1);
   --menu-bg: rgba(101, 109, 139, 1);
   --menu-text: rgba(225, 229, 240, 1);
-  --start-btn: rgba(228, 157, 62, 1);
-  --green-staus: rgba(83, 180, 95, 1);
+  --action-btn: rgba(228, 157, 62, 1);
+  --green-status: rgba(83, 180, 95, 1);
   --red-status: rgba(204, 12, 0, 1);
 }/*# sourceMappingURL=variables.css.map */
