--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,8 @@ img {
   letter-spacing: -0.32px;
   color: var(--secondary-textcolor);
   text-align: start;
+  padding: 16px 20px;
+  background-color: var(--white);
 }
 .orders__table__item {
   border-bottom: 1px solid var(--lines-color);
@@ -168,6 +170,7 @@ img {
   line-height: normal;
   letter-spacing: -0.32px;
   color: var(--main-textcolor);
+  padding: 16px 20px;
 }
 
 .delivered {
@@ -176,11 +179,6 @@ img {
 
 .cancelled {
   color: var(--red-status);
-}
-
-th,
-td {
-  padding: 16px 20px;
 }
 
 .details__btn {
@@ -193,11 +191,21 @@ td {
   padding: 5px 15px;
   background-color: transparent;
   border-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 5px;
 }
 
 .action__btn {
-  padding: 8px 39px;
-  width: 160px;
+  padding: 8px 9px;
+  width: 190px;
   border-radius: 10px;
   border: 2px solid var(--action-btn);
   color: var(--action-btn);
