--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -3,14 +3,59 @@
   background-color: var(--main-bg);
 }
 
+.logo__img {
+  margin-bottom: 30px;
+}
+
 .menu {
   width: 280px;
   height: 1080px;
   padding: 30px;
   background-color: var(--menu-bg);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+
+  &__user {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 27px 0px;
+    border-top: 2px solid #4e5474;
+
+    &__photo {
+      margin-right: 15px;
+    }
+
+    &__name {
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      letter-spacing: 0.325px;
+      color: var(--menu-text);
+      margin-bottom: 0;
+      margin-right: 60px;
+    }
+  }
 
   &__nav {
     margin-bottom: 1px;
+
+    &__quantity {
+      display: inline-flex;
+      padding: 3px 12px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      background-color: var(--active);
+      color: var(--white, #fff);
+      font-size: 13px;
+      font-weight: 500;
+      line-height: normal;
+      letter-spacing: 0.325px;
+    }
 
     &__item {
       width: 220px;
@@ -18,6 +63,8 @@
       border-radius: 10px;
       display: flex;
       align-items: center;
+
+      gap: 15px;
       padding: 16px;
     }
 
