--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -7,6 +7,7 @@
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.5px;
+    margin-bottom: 35px;
   }
 
   &__all__btn {
@@ -23,6 +24,17 @@
     letter-spacing: 0.35px;
     text-transform: uppercase;
     color: var(--main-textcolor);
+  }
+
+  &__options__fields {
+    display: flex;
+    gap: 10px;
+  }
+
+  &__btns__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   &__filter {
@@ -55,6 +67,7 @@
 
     &__search {
       width: 339px;
+      height: 36px;
       padding: 8px 16px;
       border-radius: 10px;
       background-color: var(--white);
