--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,21 @@ img {
   --red-status: rgba(204, 12, 0, 1);
 }
 
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 .main__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -124,6 +139,7 @@ img {
       flex-wrap: nowrap;
   padding: 27px 0px;
   border-top: 2px solid #4e5474;
+  cursor: pointer;
 }
 .menu__user__photo {
   margin-right: 15px;
@@ -172,6 +188,10 @@ img {
           align-items: center;
   gap: 15px;
   padding: 16px;
+  cursor: pointer;
+}
+.menu__nav__item:hover {
+  background-color: rgba(76, 82, 114, 0.3);
 }
 .menu__nav__link {
   font-size: 13px;
@@ -211,6 +231,7 @@ img {
   letter-spacing: 0.35px;
   text-transform: uppercase;
   color: var(--main-textcolor);
+  cursor: pointer;
 }
 .orders__options__fields {
   display: -webkit-box;
@@ -244,6 +265,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  cursor: pointer;
 }
 .orders__filter__box {
   display: -webkit-box;
@@ -270,10 +292,12 @@ img {
   padding: 8px 16px;
   border-radius: 10px;
   background-color: var(--white);
-  border-color: transparent;
+  border: 3px solid var(--white);
+  cursor: pointer;
 }
 .orders__filter__search:focus {
-  border-color: green;
+  border: 3px solid var(--active);
+  outline: none;
 }
 
 .table__section {
@@ -341,6 +365,7 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 5px;
+  cursor: pointer;
 }
 
 .action__btn {
@@ -355,4 +380,50 @@ img {
   line-height: normal;
   letter-spacing: 0.325px;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+tr:hover td {
+  background-color: var(--main-bg);
+  cursor: pointer;
+}
+
+.pagination {
+  width: 100%;
+  height: 47px;
+  background-color: var(--white);
+  border-radius: 0px 0px 10px 10px;
+  padding: 12px 23px;
+}
+.pagination__title {
+  color: var(--secondary-textcolor);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 112.5%;
+  margin-bottom: 0;
+}
+.pagination__shown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.pagination__page__quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 62px;
+  height: 24px;
+  padding: 4px 5px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 4px;
+  border: 1px solid var(--line-color);
+  background: var(--background, #f9f9f9);
 }/*# sourceMappingURL=main.css.map */
