--- a/css/variables.css
+++ b/css/variables.css
@@ -10,4 +10,19 @@
   --action-btn: rgba(228, 157, 62, 1);
   --green-status: rgba(83, 180, 95, 1);
   --red-status: rgba(204, 12, 0, 1);
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=variables.css.map */
