--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -23,6 +23,7 @@
     flex-wrap: nowrap;
     padding: 27px 0px;
     border-top: 2px solid #4e5474;
+    cursor: pointer;
 
     &__photo {
       margin-right: 15px;
@@ -66,6 +67,11 @@
 
       gap: 15px;
       padding: 16px;
+      cursor: pointer;
+    }
+
+    &__item:hover {
+      background-color: rgba(76, 82, 114, 0.3);
     }
 
     &__link {
