--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -70,7 +70,7 @@
     &__search {
       width: 339px;
       height: 36px;
-      padding: 8px 16px;
+      padding: 8px 16px 8px 48px;
       border-radius: 10px;
       background-color: var(--white);
       border: 3px solid var(--white);
@@ -174,6 +174,9 @@ tr:hover td {
   background-color: var(--white);
   border-radius: 0px 0px 10px 10px;
   padding: 12px 23px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   &__title {
     color: var(--secondary-textcolor);
@@ -199,4 +202,72 @@ tr:hover td {
     border: 1px solid var(--line-color);
     background: var(--background, #f9f9f9);
   }
+
+  &__right {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+
+  &__pages {
+    color: var(--secondary-textcolor);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 112.5%;
+  }
+
+  &__number {
+    width: 24px;
+    height: 24px;
+    padding: 4px 10px;
+    border-radius: 4px;
+    background: var(--white);
+    color: var(--secondary-text, #a1a5ba);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 112.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+  }
+}
+
+.icon__left {
+  transform: rotate(90deg);
+  fill: var(--line-color);
+}
+
+.icon__right {
+  transform: rotate(-90deg);
+}
+
+.current__page {
+  background-color: var(--active);
+  color: var(--white);
+}
+
+.icon__thumb {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-with-icon {
+  position: relative;
+}
+
+.icon__search {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
 }
