--- a/css/main.css
+++ b/css/main.css
@@ -435,6 +435,7 @@ tr:hover td {
   border-radius: 4px;
   border: 1px solid var(--line-color);
   background: var(--background, #f9f9f9);
+  cursor: pointer;
 }
 .pagination__right {
   display: -webkit-box;
@@ -470,6 +471,7 @@ tr:hover td {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
 }
 .pagination__btns {
   display: -webkit-box;
@@ -512,6 +514,7 @@ tr:hover td {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
 }
 
 .input-with-icon {
