--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -1,6 +1,7 @@
 .orders {
   padding: 40px;
   height: 100vh;
+  width: 100vh;
 
   &__title {
     font-size: 20px;
@@ -93,9 +94,9 @@
 }
 
 .orders__table {
-  width: 100%;
+  // width: 100%;
   table-layout: fixed;
-  min-width: 1000px;
+  // min-width: 1000px;
   border-collapse: collapse;
 
   &__title {
