--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -27,6 +27,11 @@
     cursor: pointer;
   }
 
+  &__all__btn:hover {
+    background-color: var(--lines-color);
+    border: 1px solid var(--menu-bg);
+  }
+
   &__options__fields {
     display: flex;
     gap: 10px;
@@ -108,6 +113,10 @@
     text-align: start;
     padding: 16px 20px;
     background-color: var(--white);
+  }
+
+  &__head {
+    display: table-row !important;
   }
 
   &__item {
@@ -278,6 +287,7 @@ tr:hover td {
   width: 284px;
   position: absolute;
   top: 40px;
+  left: 0;
   z-index: 2;
   background-color: var(--white);
   border: 1px solid var(--active);
