--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -175,7 +175,7 @@
 
 .action__btn {
   padding: 8px 9px;
-  width: 190px;
+  max-width: 190px;
   border-radius: 10px;
   border: 2px solid var(--action-btn);
   color: var(--action-btn);
@@ -186,6 +186,10 @@
   letter-spacing: 0.325px;
   text-transform: uppercase;
   cursor: pointer;
+
+  @media (min-width: 1800px) {
+    min-width: 190px;
+  }
 }
 
 .action__btn:hover,
