--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -1,5 +1,5 @@
 .orders {
-  padding: 40px;
+  padding: 57px 40px 40px 40px;
   height: 100vh;
 
   &__title {
@@ -103,7 +103,8 @@
 }
 
 .table__section {
-  height: 880px;
+  height: 75vh;
+  // width: 85vw;
   overflow: auto;
   background-color: var(--white);
   border-radius: 0px 10px 10px 10px;
@@ -139,7 +140,8 @@
     line-height: normal;
     letter-spacing: -0.32px;
     color: var(--main-textcolor);
-    padding: 16px 20px;
+    padding: 15px 20px;
+    white-space: nowrap;
   }
 }
 
@@ -175,7 +177,7 @@
 
 .action__btn {
   padding: 8px 9px;
-  max-width: 190px;
+  width: 190px;
   border-radius: 10px;
   border: 2px solid var(--action-btn);
   color: var(--action-btn);
@@ -186,10 +188,6 @@
   letter-spacing: 0.325px;
   text-transform: uppercase;
   cursor: pointer;
-
-  @media (min-width: 1800px) {
-    min-width: 190px;
-  }
 }
 
 .action__btn:hover,
