--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,7 @@ img {
 .orders {
   padding: 57px 40px 40px 40px;
   height: 100vh;
+  overflow: hidden;
 }
 .orders__title {
   font-size: 20px;
@@ -258,6 +259,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
 }
 .orders__filter {
   position: relative;
