--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -1,6 +1,7 @@
 .orders {
   padding: 57px 40px 40px 40px;
   height: 100vh;
+  overflow: hidden;
 
   &__title {
     font-size: 20px;
@@ -45,6 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
   }
 
   &__filter {
@@ -111,7 +113,6 @@
 }
 
 .orders__table {
-  // width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
 
