--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -2,6 +2,7 @@
   padding: 57px 40px 40px 40px;
   height: 100vh;
   overflow: hidden;
+  width: 100%;
 
   &__title {
     font-size: 20px;
@@ -113,8 +114,7 @@
 }
 
 .orders__table {
-  table-layout: fixed;
-  border-collapse: collapse;
+  width: 100%;
 
   &__title {
     position: sticky;
@@ -130,8 +130,7 @@
   }
 
   &__head {
-    display: table-row !important;
-    white-space: nowrap;
+    display: flex;
   }
 
   &__item {
@@ -143,6 +142,11 @@
     color: var(--main-textcolor);
     padding: 5px 20px;
     white-space: nowrap;
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
   }
 }
 
