--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -206,7 +206,7 @@
   border-color: var(--white);
 }
 
-tr:hover td {
+.orders__table__row:hover {
   background-color: var(--main-bg);
   cursor: pointer;
 }
