--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -45,7 +45,7 @@
 
   &__btns__container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     width: 100%;
   }
@@ -322,13 +322,46 @@
 .filter__list {
   width: 100%;
   position: absolute;
-  top: 40px;
+  top: 39px;
   left: 0;
   z-index: 2;
   background-color: var(--white);
-  border: 1px solid var(--active);
-  padding: 10px;
+  padding: 15px;
   display: none;
+  box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+  border-radius: 10px;
+}
+
+.filter__list__thumb {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.filter__list__point {
+  color: #656d8b;
+  font-family: Futura;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -0.32px;
+}
+
+.date__input {
+  width: 175px;
+  height: 36px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 2px solid #f4f5fb;
+  background-color: #f4f5fb;
+}
+
+.date__button {
+  border-radius: 8px;
+  background-color: #f4f5fb;
+  border: 2px solid #f4f5fb;
+  width: 69px;
+  height: 36px;
+  padding: 16px;
 }
 
 .filter__item {
