filter almost done

--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -341,9 +341,19 @@
 .filter__list__point {
   color: #656d8b;
   font-family: Futura;
-  font-size: 16px;
   font-weight: 500;
   letter-spacing: -0.32px;
+}
+
+.filter__date {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.filter__date__picker {
+  display: flex;
+  gap: 8px;
 }
 
 .date__input {
@@ -355,6 +365,14 @@
   background-color: #f4f5fb;
 }
 
+.date__input::placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
 .date__button {
   border-radius: 8px;
   background-color: #f4f5fb;
@@ -362,18 +380,55 @@
   width: 69px;
   height: 36px;
   padding: 16px;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
 }
 
-.filter__item {
-  color: var(--main-textcolor);
-
-  font-size: 16px;
+.filter__date__label {
+  color: rgba(101, 109, 139, 0.8);
+  font-family: Futura;
+  font-size: 14px;
   font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.32px;
-  padding: 10px;
+  line-height: 16px;
 }
 
-.filter__item:hover {
-  background-color: #a1a5ba;
+.fiter__form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.aply__button {
+  border-radius: 10px;
+  background-color: #2583c6;
+  border: 2px solid #2583c6;
+  height: 40px;
+  width: 253px;
+  padding: 8px 39px;
+  text-align: center;
+  color: #fff;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+  text-transform: uppercase;
+}
+
+.clear__button {
+  border-radius: 10px;
+  background-color: #fff;
+  border: 2px solid #fff;
+  height: 40px;
+  width: 253px;
+  padding: 8px 39px;
+  text-align: center;
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+  text-transform: uppercase;
 }
