--- a/css/main.css
+++ b/css/main.css
@@ -603,9 +603,26 @@ img {
 .filter__list__point {
   color: #656d8b;
   font-family: Futura;
-  font-size: 16px;
   font-weight: 500;
   letter-spacing: -0.32px;
+}
+
+.filter__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+}
+
+.filter__date__picker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8px;
 }
 
 .date__input {
@@ -617,6 +634,46 @@ img {
   background-color: #f4f5fb;
 }
 
+.date__input::-webkit-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.date__input::-moz-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.date__input:-ms-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.date__input::-ms-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.date__input::placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
 .date__button {
   border-radius: 8px;
   background-color: #f4f5fb;
@@ -624,17 +681,66 @@ img {
   width: 69px;
   height: 36px;
   padding: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.filter__item {
-  color: var(--main-textcolor);
-  font-size: 16px;
+.filter__date__label {
+  color: rgba(101, 109, 139, 0.8);
+  font-family: Futura;
+  font-size: 14px;
   font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.32px;
-  padding: 10px;
+  line-height: 16px;
 }
 
-.filter__item:hover {
-  background-color: #a1a5ba;
+.fiter__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.aply__button {
+  border-radius: 10px;
+  background-color: #2583c6;
+  border: 2px solid #2583c6;
+  height: 40px;
+  width: 253px;
+  padding: 8px 39px;
+  text-align: center;
+  color: #fff;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+  text-transform: uppercase;
+}
+
+.clear__button {
+  border-radius: 10px;
+  background-color: #fff;
+  border: 2px solid #fff;
+  height: 40px;
+  width: 253px;
+  padding: 8px 39px;
+  text-align: center;
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+  text-transform: uppercase;
 }/*# sourceMappingURL=main.css.map */
