--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,12 @@ img {
   font-family: Futura;
   font-weight: 500;
   letter-spacing: -0.32px;
+  position: relative;
+}
+
+.icon__info {
+  position: absolute;
+  margin-left: 7px;
 }
 
 .filter__date {
@@ -691,6 +697,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .filter__date__label {
@@ -713,6 +720,69 @@ img {
   margin-top: 15px;
 }
 
+.quantity__input__thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 10px;
+}
+
+.quantity__input {
+  border-radius: 8px;
+  border: 2px solid var(--Background-1, #e6e9f5);
+  background: var(--White, #fff);
+  width: 117px;
+  height: 36px;
+  padding: 8px 10px;
+}
+
+.quantity__input::-webkit-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.quantity__input::-moz-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.quantity__input:-ms-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.quantity__input::-ms-input-placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.quantity__input::placeholder {
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.line {
+  width: 8px;
+  height: 1.5px;
+  background-color: #656d8b;
+}
+
 .aply__button {
   border-radius: 10px;
   background-color: #2583c6;
@@ -727,6 +797,7 @@ img {
   font-weight: 500;
   letter-spacing: 0.35px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .clear__button {
@@ -743,4 +814,5 @@ img {
   font-weight: 500;
   letter-spacing: 0.35px;
   text-transform: uppercase;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
