--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -343,6 +343,12 @@
   font-family: Futura;
   font-weight: 500;
   letter-spacing: -0.32px;
+  position: relative;
+}
+
+.icon__info {
+  position: absolute;
+  margin-left: 7px;
 }
 
 .filter__date {
@@ -384,6 +390,7 @@
   gap: 5px;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .filter__date__label {
@@ -401,6 +408,36 @@
   margin-top: 15px;
 }
 
+.quantity__input__thumb {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.quantity__input {
+  border-radius: 8px;
+  border: 2px solid var(--Background-1, #e6e9f5);
+  background: var(--White, #fff);
+  width: 117px;
+  height: 36px;
+  padding: 8px 10px;
+}
+
+.quantity__input::placeholder {
+  color: #a1a5ba;
+
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.line {
+  width: 8px;
+  height: 1.5px;
+  background-color: #656d8b;
+}
+
 .aply__button {
   border-radius: 10px;
   background-color: #2583c6;
@@ -415,6 +452,7 @@
   font-weight: 500;
   letter-spacing: 0.35px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .clear__button {
@@ -431,4 +469,5 @@
   font-weight: 500;
   letter-spacing: 0.35px;
   text-transform: uppercase;
+  cursor: pointer;
 }
