--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,7 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   cursor: pointer;
+  border: 3px solid var(--white);
 }
 @media (max-width: 1200px) {
   .orders__filter {
@@ -321,6 +322,10 @@ img {
 .orders__filter__search:focus {
   border: 3px solid var(--active);
   outline: none;
+}
+
+.orders__filter:hover {
+  border-color: var(--active);
 }
 
 .table__section {
@@ -386,7 +391,8 @@ img {
   letter-spacing: 0.325px;
   text-transform: uppercase;
   color: var(--secondary-textcolor);
-  padding: 5px 15px;
+  padding: 8px 15px;
+  height: 30px;
   background-color: transparent;
   border-color: transparent;
   display: -webkit-box;
@@ -404,7 +410,9 @@ img {
 
 .details__btn:hover,
 .details__btn:focus {
-  background-color: var(--menu-bg);
+  border-radius: 10px;
+  background: #e2f3fe;
+  color: var(--active);
 }
 
 .action__btn {
@@ -427,11 +435,6 @@ img {
   color: var(--white);
   background-color: var(--action-btn);
   border-color: var(--white);
-}
-
-.orders__table__row:hover {
-  background-color: var(--main-bg);
-  cursor: pointer;
 }
 
 .pagination {
@@ -576,17 +579,28 @@ img {
 }
 
 .filter__list {
-  width: 100%;
+  width: 284px;
   position: absolute;
-  top: 39px;
-  left: 0;
+  top: 155px;
   z-index: 2;
   background-color: var(--white);
   padding: 15px;
-  display: none;
   -webkit-box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
           box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
   border-radius: 10px;
+}
+
+.inactive {
+  display: none;
+}
+
+.active {
+  display: block;
+}
+
+.active__icon {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .filter__list__thumb {
@@ -638,6 +652,10 @@ img {
   border-radius: 8px;
   border: 2px solid #f4f5fb;
   background-color: #f4f5fb;
+  color: #000;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .date__input::-webkit-input-placeholder {
@@ -680,6 +698,11 @@ img {
   line-height: 20px;
 }
 
+.date__input:focus {
+  border: 2px solid var(--active);
+  outline: none;
+}
+
 .date__button {
   border-radius: 8px;
   background-color: #f4f5fb;
@@ -698,6 +721,10 @@ img {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
+}
+
+.date__button:focus {
+  border-color: var(--active);
 }
 
 .filter__date__label {
@@ -735,11 +762,15 @@ img {
 
 .quantity__input {
   border-radius: 8px;
-  border: 2px solid var(--Background-1, #e6e9f5);
+  border: 2px solid #e6e9f5;
   background: var(--White, #fff);
   width: 117px;
   height: 36px;
   padding: 8px 10px;
+  color: #000;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .quantity__input::-webkit-input-placeholder {
@@ -775,6 +806,11 @@ img {
   font-family: Futura;
   font-size: 14px;
   font-weight: 500;
+}
+
+.quantity__input:focus {
+  border: 2px solid var(--active);
+  outline: none;
 }
 
 .line {
