--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -62,6 +62,7 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    border: 3px solid var(--white);
 
     @media (max-width: 1200px) {
       width: 150px;
@@ -105,6 +106,9 @@
   }
 }
 
+.orders__filter:hover {
+  border-color: var(--active);
+}
 .table__section {
   height: 75vh;
   width: 100%;
@@ -169,7 +173,8 @@
   letter-spacing: 0.325px;
   text-transform: uppercase;
   color: var(--secondary-textcolor);
-  padding: 5px 15px;
+  padding: 8px 15px;
+  height: 30px;
   background-color: transparent;
   border-color: transparent;
   display: flex;
@@ -181,7 +186,9 @@
 
 .details__btn:hover,
 .details__btn:focus {
-  background-color: var(--menu-bg);
+  border-radius: 10px;
+  background: #e2f3fe;
+  color: var(--active);
 }
 
 .action__btn {
@@ -204,11 +211,6 @@
   color: var(--white);
   background-color: var(--action-btn);
   border-color: var(--white);
-}
-
-.orders__table__row:hover {
-  background-color: var(--main-bg);
-  cursor: pointer;
 }
 
 .pagination {
@@ -320,16 +322,26 @@
 }
 
 .filter__list {
-  width: 100%;
+  width: 284px;
   position: absolute;
-  top: 39px;
-  left: 0;
+  top: 155px;
   z-index: 2;
   background-color: var(--white);
   padding: 15px;
-  display: none;
   box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
   border-radius: 10px;
+}
+
+.inactive {
+  display: none;
+}
+
+.active {
+  display: block;
+}
+
+.active__icon {
+  transform: rotate(180deg);
 }
 
 .filter__list__thumb {
@@ -369,6 +381,10 @@
   border-radius: 8px;
   border: 2px solid #f4f5fb;
   background-color: #f4f5fb;
+  color: #000;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .date__input::placeholder {
@@ -377,6 +393,11 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+}
+
+.date__input:focus {
+  border: 2px solid var(--active);
+  outline: none;
 }
 
 .date__button {
@@ -391,6 +412,10 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.date__button:focus {
+  border-color: var(--active);
 }
 
 .filter__date__label {
@@ -417,11 +442,15 @@
 
 .quantity__input {
   border-radius: 8px;
-  border: 2px solid var(--Background-1, #e6e9f5);
+  border: 2px solid #e6e9f5;
   background: var(--White, #fff);
   width: 117px;
   height: 36px;
   padding: 8px 10px;
+  color: #000;
+  font-family: Futura;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .quantity__input::placeholder {
@@ -430,6 +459,11 @@
   font-family: Futura;
   font-size: 14px;
   font-weight: 500;
+}
+
+.quantity__input:focus {
+  border: 2px solid var(--active);
+  outline: none;
 }
 
 .line {
