changes in main table

--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -146,7 +146,7 @@
     line-height: normal;
     letter-spacing: -0.32px;
     color: var(--main-textcolor);
-    padding: 5px 20px;
+    padding: 11px 20px;
     white-space: nowrap;
     display: table-cell;
   }
@@ -197,8 +197,8 @@
 }
 
 .action__btn {
-  padding: 8px 9px;
-  width: 190px;
+  width: 160px;
+  height: 30px;
   border-radius: 10px;
   border: 2px solid var(--action-btn);
   color: var(--action-btn);
@@ -224,6 +224,7 @@
 
   background-color: var(--white);
   border-radius: 0px 0px 10px 10px;
+  border-top: 1px solid #d6dae6;
   padding: 12px 23px;
   display: flex;
   align-items: center;
