--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ img {
   line-height: normal;
   letter-spacing: -0.32px;
   color: var(--main-textcolor);
-  padding: 5px 20px;
+  padding: 11px 20px;
   white-space: nowrap;
   display: table-cell;
 }
@@ -421,8 +421,8 @@ img {
 }
 
 .action__btn {
-  padding: 8px 9px;
-  width: 190px;
+  width: 160px;
+  height: 30px;
   border-radius: 10px;
   border: 2px solid var(--action-btn);
   color: var(--action-btn);
@@ -447,6 +447,7 @@ img {
   height: 47px;
   background-color: var(--white);
   border-radius: 0px 0px 10px 10px;
+  border-top: 1px solid #d6dae6;
   padding: 12px 23px;
   display: -webkit-box;
   display: -ms-flexbox;
