--- a/css/main.css
+++ b/css/main.css
@@ -473,11 +473,14 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 10px;
 }
 .pagination__page__quantity {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 9px;
   width: 62px;
   height: 24px;
   padding: 4px 5px;
@@ -488,7 +491,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 4px;
-  border: 1px solid var(--line-color);
+  border: 1px solid var(--lines-color);
   background: var(--background, #f9f9f9);
   cursor: pointer;
 }
@@ -539,6 +542,31 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 6px;
+}
+
+.inactive-pagination {
+  display: none;
+}
+
+.active-pagination {
+  display: block;
+  position: absolute;
+  width: 100%;
+  background-color: #2583c6;
+  top: 25px;
+  left: 0;
+}
+
+.pagination__list {
+  border-radius: 4px;
+  border: 1px solid var(--lines-color);
+  padding: 5px;
+  background: var(--background, #f9f9f9);
+}
+
+.pagination__item:hover,
+.pagination__item:focus {
+  background: var(--lines-color);
 }
 
 .icon__left {
