--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -241,17 +241,20 @@
   &__shown {
     display: flex;
     align-items: center;
+    gap: 10px;
   }
 
   &__page__quantity {
+    position: relative;
     display: flex;
+    gap: 9px;
     width: 62px;
     height: 24px;
     padding: 4px 5px;
     justify-content: flex-end;
     align-items: center;
     border-radius: 4px;
-    border: 1px solid var(--line-color);
+    border: 1px solid var(--lines-color);
     background: var(--background, #f9f9f9);
     cursor: pointer;
   }
@@ -291,6 +294,31 @@
     justify-content: center;
     gap: 6px;
   }
+}
+
+.inactive-pagination {
+  display: none;
+}
+
+.active-pagination {
+  display: block;
+  position: absolute;
+  width: 100%;
+  background-color: #2583c6;
+  top: 25px;
+  left: 0;
+}
+
+.pagination__list {
+  border-radius: 4px;
+  border: 1px solid var(--lines-color);
+  padding: 5px;
+  background: var(--background, #f9f9f9);
+}
+
+.pagination__item:hover,
+.pagination__item:focus {
+  background: var(--lines-color);
 }
 
 .icon__left {
