--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,7 @@ img {
   height: 75vh;
   width: 100%;
   overflow: auto;
+  padding: 0 20px 18px 20px;
   background-color: var(--white);
   -webkit-box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
           box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
@@ -339,11 +340,10 @@ img {
 
 .orders__table {
   width: 100%;
-  display: table;
-  border-collapse: collapse;
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr 3fr 2fr 1fr 1fr 2fr;
 }
 .orders__table__title {
-  display: table-cell;
   position: sticky;
   top: 0;
   font-size: 16px;
@@ -352,27 +352,23 @@ img {
   letter-spacing: -0.32px;
   color: var(--secondary-textcolor);
   text-align: start;
-  padding: 16px 20px;
+  padding: 18px 5px 0 5px;
   background-color: var(--white);
 }
-.orders__table__head {
-  display: table-row;
-}
 .orders__table__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 16px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.32px;
   color: var(--main-textcolor);
-  padding: 11px 20px;
+  padding: 10.5px 5px;
   white-space: nowrap;
-  display: table-cell;
-}
-.orders__table__row {
-  display: table-row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   border-bottom: 1px solid var(--lines-color);
 }
 
@@ -963,7 +959,8 @@ img {
 
 .orders__list {
   width: 100%;
-  padding: 15px 20px;
+  padding: 15px 0px;
+  grid-column: span 8;
 }
 
 .active-ordersList {
@@ -987,8 +984,12 @@ img {
   border-radius: 10px;
   background: #f4f5fb;
   padding: 5px 11px 5px 19px;
-  display: table;
-  border-collapse: collapse;
+}
+
+.order__list__table {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 4fr 1fr 1fr;
 }
 
 .order__item__title {
@@ -1008,23 +1009,27 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 5px;
+  padding: 15px 5px;
+  border-bottom: 1px solid #d6dae6;
 }
 
-.order__item {
+.order__item__number__thumb {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 15px 0;
-  border-bottom: 1px solid #d6dae6;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
 }
 
 .order__item__icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 15px 0px;
+  border-bottom: 1px solid #d6dae6;
 }
 
 .order__item__part-number {
@@ -1067,16 +1072,30 @@ img {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  padding: 15px 0px;
+  border-bottom: 1px solid #d6dae6;
 }
 
 .order__item__total__thumb {
   padding: 14px 0;
+  grid-column: span 6;
 }
 
 .order__item__row {
   display: table-row;
 }
 
-.order__item__cell {
-  display: table-cell;
+.order__item__total-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 15px 0px;
 }/*# sourceMappingURL=main.css.map */
